// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syslog Snapshot form disabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        System Logs Retention
      </h2>
      <p>
        During device reboot, system logs are lost by default. This option allows saving system logs using the Storage plugin. Logs are saved into '/srv/log/messages'.
      </p>
      <p>
        To enable this option, you have to configure storage in the 
        <a
          href="/reforis/storage"
          title="Go to Storage plugin"
        >
          Storage plugin
        </a>
         first.
      </p>
      <div
        class="mb-3 form-check"
      >
        <input
          class="form-check-input"
          disabled=""
          id="1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable System Logs Retention
        </label>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Syslog Snapshot form enabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        System Logs Retention
      </h2>
      <p>
        During device reboot, system logs are lost by default. This option allows saving system logs using the Storage plugin. Logs are saved into '/srv/log/messages'.
      </p>
      <p>
        To enable this option, you have to configure storage in the 
        <a
          href="/reforis/storage"
          title="Go to Storage plugin"
        >
          Storage plugin
        </a>
         first.
      </p>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable System Logs Retention
        </label>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
